# mutmut

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.rst  README.rst  pyproject.toml
e2e_projects/benchmark_1k/: pyproject.toml  run_benchmark.py
e2e_projects/my_lib/src/my_lib/: __init__.py
e2e_projects/my_lib/tests/: test_my_lib.py
e2e_projects/py3_14_features/src/py3_14_features/: __init__.py
e2e_projects/type_checking/tests/: test_type_checking.py
scripts/: run_tests.sh
src/mutmut/: __main__.py  code_coverage.py  configuration.py  state.py  stats.py
src/mutmut/models/: cache_status.py
src/mutmut/mutation/: file_mutation.py  mutators.py  trampoline_templates.py
src/mutmut/runners/: harness.py
src/mutmut/ui/: browse.py  browser.py  helpers.py
src/mutmut/utils/: file_utils.py  format_utils.py  logging_utils.py
src/mutmut/workers/: isolation.py
tests/: conftest.py  test_configuration.py  test_mutation regression.py
tests/e2e/: e2e_utils.py  test_e2e_config.py  test_e2e_coverage.py  test_e2e_hot_fork_basic.py  test_e2e_hot_fork_gevent.py  test_e2e_my_lib.py  test_e2e_py3_14.py  test_e2e_type_checking.py
tests/mutation/: test_mutation.py
tests/unit/: test_configuration.py  test_generation_error_handling.py
tests/unit/models/: test_cache_status.py
tests/unit/mutation/: test_file_mutation.py  test_mutation.py
tests/unit/stats/: test_summary.py
tests/unit/ui/: test_helpers.py
tests/unit/utils/: test_file_utils.py  test_format_utils.py
tests/unit/workers/: test_isolation.py  test_timeout.py
tests/workers/: conftest.py
