[project]
name = "benchmark-1k"
version = "0.1.0"
description = "Benchmark project for mutmut warmup strategy comparison (~1000 mutants)"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mutmut]
log_to_file = true
process_isolation = "hot-fork"
hot_fork_warmup = "collect"
debug = false
dependency_tracking_depth = 5
track_dependencies = true
